--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/cityAndFoodListFragment">
+    app:startDestination="@id/currencyListFragment">
 
     <fragment
-        android:id="@+id/cityAndFoodListFragment"
+        android:id="@+id/currencyListFragment"
         android:name="com.paypay.testApplication.ui.currencyCalculator.CurrencyCalculatorFragment"
         android:label="Wealth Park App"
         tools:layout="@layout/fragment_currency_calculator">
         <action
-            android:id="@+id/action_cityAndFoodListFragment_to_DetailFragment"
+            android:id="@+id/action_currencyListFragment_to_DetailFragment"
             app:destination="@id/detailFragment" />
     </fragment>
     <fragment
@@ -21,7 +21,7 @@
         tools:layout="@layout/fragment_details" />
 
     <!--    <argument-->
-    <!--        android:name="cityItem"-->
-    <!--        app:argType="com.wealthPark.testApplication.data.local.model.CityItem"/>-->
+    <!--        android:name="CurrencyItem"-->
+    <!--        app:argType="com.wealthPark.testApplication.data.local.model.CurrencyItem"/>-->
 
 </navigation>
